Bug 82927 - [8 Regression] ICE in verify_flow_info building SH glibc
Summary: [8 Regression] ICE in verify_flow_info building SH glibc
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 8.0
: P3 normal
Target Milestone: 8.0
Assignee: Martin Liška
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-10 01:06 UTC by Joseph S. Myers
Modified: 2017-11-15 07:19 UTC (History)
1 user (show)

See Also:
Host:
Target: sh4-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments
preprocessed source (37.59 KB, text/plain)
2017-11-10 01:06 UTC, Joseph S. Myers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph S. Myers 2017-11-10 01:06:12 UTC
Created attachment 42570 [details]
preprocessed source

Given the fix for bug 82863 (checked in although that bug isn't yet closed), GCC completes the libgcc build but then ICEs building glibc for sh4-linux-gnu.  My expectation is that this ICE was also introduced by r254379, though I haven't tested to verify this.  Compile the attached test (not reduced) with -O2.

gconv_builtin.c: In function '__gconv_get_builtin_trans':
gconv_builtin.c:86:1: error: verify_flow_info: Wrong probability of edge 10->12
gconv_builtin.c:86:1: error: verify_flow_info: Wrong probability of edge 10->11
gconv_builtin.c:86:1: error: verify_flow_info: Wrong probability of edge 6->9
gconv_builtin.c:86:1: error: verify_flow_info: Wrong probability of edge 6->7
during RTL pass: expand
gconv_builtin.c:86:1: internal compiler error: verify_flow_info failed
0x71ba23 verify_flow_info()
        /scratch/jmyers/glibc/many8/src/gcc/gcc/cfghooks.c:265
0x10a9ef2 checking_verify_flow_info
        /scratch/jmyers/glibc/many8/src/gcc/gcc/cfghooks.h:198
0x10a9ef2 try_optimize_cfg
        /scratch/jmyers/glibc/many8/src/gcc/gcc/cfgcleanup.c:3015
0x10aa1fd cleanup_cfg(int)
        /scratch/jmyers/glibc/many8/src/gcc/gcc/cfgcleanup.c:3179
0x718815 execute
        /scratch/jmyers/glibc/many8/src/gcc/gcc/cfgexpand.c:6511
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
Comment 1 Martin Liška 2017-11-10 11:36:58 UTC
I'll take a look, thank you for report.
Comment 2 Martin Liška 2017-11-15 07:12:30 UTC
Author: marxin
Date: Wed Nov 15 07:11:59 2017
New Revision: 254755

URL: https://gcc.gnu.org/viewcvs?rev=254755&root=gcc&view=rev
Log:
Use proper probability (PR target/82927)

2017-11-15  Martin Liska  <mliska@suse.cz>

	PR target/82927
	* config/sh/sh-mem.cc: Use proper probability for
	REG_BR_PROB_NOTE.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/sh/sh-mem.cc
Comment 3 Martin Liška 2017-11-15 07:19:31 UTC
Fixed.