Fix usage of REG_BR_PROBs (PR target/82927).

gcc/ChangeLog:

2017-11-14  Martin Liska  <mliska@suse.cz>

	PR target/82927
	* config/sh/sh-mem.cc: Initialize probabilities.
	(sh_expand_cmpstr): Use to_reg_br_prob_note function for them.
	(sh_expand_cmpnstr): Likewise.
	(sh_expand_strlen): Likewise.
	(sh_expand_setmem): Likewise.